; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/m32r/platforms/opsput/extr_io.c__outw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/m32r/platforms/opsput/extr_io.c__outw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LAN_IOSTART = common dso_local global i64 0, align 8
@LAN_IOEND = common dso_local global i64 0, align 8
@M32R_PCC_IOEND0 = common dso_local global i64 0, align 8
@M32R_PCC_IOSTART0 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_outw(i16 zeroext %0, i64 %1) #0 {
  %3 = alloca i16, align 2
  %4 = alloca i64, align 8
  store i16 %0, i16* %3, align 2
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @LAN_IOSTART, align 8
  %7 = icmp uge i64 %5, %6
  br i1 %7, label %8, label %17

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @LAN_IOEND, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %8
  %13 = load i16, i16* %3, align 2
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @PORT2ADDR_NE(i64 %14)
  %16 = call i32 @_ne_outw(i16 zeroext %13, i32 %15)
  br label %22

17:                                               ; preds = %8, %2
  %18 = load i16, i16* %3, align 2
  %19 = load i64, i64* %4, align 8
  %20 = call i64 @PORT2ADDR(i64 %19)
  %21 = inttoptr i64 %20 to i16*
  store volatile i16 %18, i16* %21, align 2
  br label %22

22:                                               ; preds = %17, %12
  ret void
}

declare dso_local i32 @_ne_outw(i16 zeroext, i32) #1

declare dso_local i32 @PORT2ADDR_NE(i64) #1

declare dso_local i64 @PORT2ADDR(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
